--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.7.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
@@ -17,6 +20,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-minimal-pie-chart": "^9.1.0",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.2.0",
@@ -50,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.17"
   }
 }
